# osmc

./: .gitignore  CONTRIBUTING.md  README.md
package/atv-remote/src/: Makefile.in  README  configure.ac
package/atv-remote/src/src/: Makefile.am
package/libafpclient-osmc/src/lib/: Makefile.am  Makefile.in  afp.c  afp_internal.h  afp_url.c  client.c  codepage.c  dsi_protocol.h  forklist.c  forklist.h  loop.c  lowlevel.h  map_def.c  meta.c  meta.h  midlevel.c  proto_desktop.c  proto_directory.c  proto_login.c  proto_replyblock.c  proto_volume.c  resource.c  resource.h  uams.c  uams_def.c  unicode.c  users.h  utils.c
package/libafpclient/src/: ChangeLog  NEWS  aclocal.m4  configure  configure.ac
package/libafpclient/src/cmdline/: Makefile.am  afpgetstatus.1  cmdline_afp.c  cmdline_afp.h  cmdline_main.h  cmdline_testafp.c  getstatus.c
package/libafpclient/src/docs/: FEATURES.txt  Makefile.am  REPORTING-BUGS.txt
package/libafpclient/src/docs/man/man1/: Makefile.am  afp.3  afpcmd.1.tmpl
package/libafpclient/src/fuse/: Makefile.am  daemon.c  fuse_error.h  fuse_int.c  fuse_int.h
package/libafpclient/src/include/: afp.h  codepage.h  map_def.h  utils.h
package/libafpclient/src/lib/: afp_replies.h  connect.c  debug.c  did.c  did.h  dsi.c  log.c  lowlevel.c  proto_attr.c  proto_files.c  proto_fork.c  proto_map.c  proto_server.c  proto_session.c  server.c  server.h  status.c  uams.h  unicode.h  users.c
package/libcec-osmc/src/: COPYING  Doxyfile  Makefile.am  configure.ac
package/libcec-osmc/src/debian/: control.hardy  libcec-get-orig-source  rules.hardy  watch
package/libcec-osmc/src/debian/source/: lintian-overrides
package/libcec-osmc/src/driver/: p8usb-cec.inf
package/libcec-osmc/src/include/: cec.h  cectypes.h
package/libcec-osmc/src/project/: libCEC.nsi  libcec.sln  p8-usbcec-driver.nsi
package/libcec-osmc/src/project/RPi/: build-deps.sh  get-toolchain.sh
package/libcec-osmc/src/project/libcec/: libcec.rc  libcec.vcxproj  libcec.vcxproj.filters
package/libcec-osmc/src/project/testclient/: testclient.rc
package/libcec-osmc/src/src/CecSharpTester/Properties/: AssemblyInfo.cs
package/libcec-osmc/src/src/LibCecTray/: LibCECTray.csproj  Program.cs
package/libcec-osmc/src/src/LibCecTray/controller/actions/: SendActivateSource.cs  SendImageViewOn.cs  SendStandby.cs  ShowDeviceInfo.cs  UpdateConfiguration.cs
package/libcec-osmc/src/src/LibCecTray/controller/applications/: ApplicationController.cs  ApplicationControllerUI.Designer.cs  ApplicationControllerUI.cs  ApplicationInput.cs  Applications.cs  CecButtonConfig.cs  CecButtonConfigUI.Designer.cs  CecButtonConfigUI.cs  ConfigureApplication.cs  IControllerTabPage.cs  KeyInput.cs
package/libcec-osmc/src/src/LibCecTray/settings/: CECSetting.cs  CECSettingLogicalAddress.cs  CECSettingLogicalAddresses.cs  CECSettingNumeric.cs  CECSettingUShort.cs  CECSettingVendorId.cs
package/libcec-osmc/src/src/LibCecTray/ui/: About.Designer.cs  About.resx  AsyncForm.cs  CECTray.Designer.cs  CECTray.cs  DeviceInformation.cs
package/libcec-osmc/src/src/lib/: CECClient.h  CECProcessor.cpp  LibCEC.h  Makefile.am
package/libcec-osmc/src/src/lib/adapter/: AdapterCommunication.h  AdapterFactory.cpp
package/libcec-osmc/src/src/lib/adapter/Pulse-Eight/: USBCECAdapterCommands.cpp  USBCECAdapterCommands.h  USBCECAdapterCommunication.h
package/libcec-osmc/src/src/lib/adapter/RPi/: RPiCECAdapterCommunication.h  RPiCECAdapterDetection.cpp
package/libcec-osmc/src/src/lib/devices/: CECAudioSystem.h  CECDeviceMap.cpp  CECPlaybackDevice.cpp  CECTV.h  CECTuner.cpp  CECTuner.h
package/libcec-osmc/src/src/lib/implementations/: CECCommandHandler.cpp  CECCommandHandler.h  PHCommandHandler.cpp  PHCommandHandler.h  SLCommandHandler.h  VLCommandHandler.cpp
package/libcec-osmc/src/src/lib/platform/: os.h
package/libcec-osmc/src/support/: create-driver-installer.cmd
package/libnfs-osmc/src/: COPYING  Makefile.am  Makefile.in  README  README.win32.txt  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  libnfs.pc.in  win32build.bat
package/libnfs-osmc/src/examples/: Makefile.am  Makefile.in  nfsclient-async.c  nfsclient-bcast.c  nfsclient-listservers.c  nfsclient-raw.c  nfsclient-sync.c
package/libnfs-osmc/src/include/: Makefile.am  Makefile.in  libnfs-private.h  libnfs-raw.h  libnfs.h  slist.h
package/libnfs-osmc/src/lib/: Makefile.am  Makefile.in  init.c  libnfs-sync.c  libnfs-win32.def  libnfs.c  pdu.c  socket.c
package/libnfs-osmc/src/mount/: Makefile.am  Makefile.in  mount.c  mount.x
package/libnfs-osmc/src/nfs/: Makefile.am  Makefile.in  nfs.c  nfs.x  nfsacl.c
package/libnfs-osmc/src/packaging/RPM/: libnfs.spec.in  makerpms.sh
package/libnfs-osmc/src/portmap/: Makefile.am  Makefile.in  portmap.c  portmap.x
package/libnfs-osmc/src/rquota/: Makefile.am  Makefile.in  rquota.c  rquota.x
package/libnfs-osmc/src/win32/: win32_compat.c  win32_compat.h  win32_errnowrapper.h  win32build.bat
package/libnfs-osmc/src/win32/libnfs/: libnfs.sln  libnfs.vcxproj  libnfs.vcxproj.filters
package/libnfs-osmc/src/win32/nfsclient-sync/: nfsclient-sync.vcxproj  nfsclient-sync.vcxproj.filters
package/libshairplay/src/: Makefile.am  README.md  configure.ac
package/libshairplay/src/AirTV-Qt/: AirTV.icns  AirTV.pro  AirTV.rc  audiooutput.cpp  audiooutput.h  main.cpp  mainapplication.cpp
package/libshairplay/src/include/: Makefile.am
package/libshairplay/src/include/shairplay/: dnssd.h  raop.h
package/libshairplay/src/src/: Makefile.am  shairplay.c
package/libshairplay/src/src/bindings/python/: Shairplay.py
package/libshairplay/src/src/bindings/qt4/: dnssdservice.cpp  dnssdservice.h  raopcallbackhandler.cpp  raopcallbacks.h  raopservice.cpp  raopservice.h
package/libshairplay/src/src/lib/: Makefile.am  base64.c  digest.c  dnssd.m  dnssdint.h  global.h  http_parser.c  http_request.c  httpd.c  logger.h  memalign.h  netutils.h  raop_buffer.h  rsapem.h  sdp.h  sockets.h  utils.c  utils.h
package/libshairplay/src/src/lib/alac/: alac.c  alac.h  stdint_win.h
package/libshairplay/src/src/lib/crypto/: crypto.h
(+3773 files in other folders)
